Front and backend bug fixes
- Fixed post visibility

- Fixed *some* issues with chrome
-- Realized that theres horizontal scrolling on feed element... curious?
- Finally fixed date sorting!
- Fixed the annoying 'Welcome user' so it can show different text when not logged in
- Removed search bar because it's not in the scope of the project ( :( )

- For fun and spice, Posts are now listed like in reddit with one per row

--- a/static/styles.css
+++ b/static/styles.css
@@ -10,7 +10,8 @@
     --frosted-fg-color: rgba(255, 255, 255, 0.2);
     --white-shadow-color: rgba(250, 250, 255, 0.2);
     --shadow-color: rgba(0, 0, 0, 0.25);
-    --white-text-color: #f5f5f5;
+    --white-text-color: #fafafa;
+    --subwhite-text-color: #a1a1a1;
     --black-text-color: rgb(69, 69, 70);
     --black-subtext-color: rgb(96, 97, 98);
     --white-subtext-color: #e5e5e5;
@@ -40,6 +41,7 @@
 /* General styles */
 * {
     scrollbar-color: var(--scrollbar-color) transparent;
+    scrollbar-width: none;
 }
 
 html {
@@ -93,7 +95,7 @@ body {
     grid-template-areas:
     'nav nav nav'
     'header profile-info profile-pic'
-    'header search search'
+    'header profile-info profile-pic'
     'posts posts posts';
     grid-template-columns: 70% 20% 10%;
     grid-template-rows: 10% 14% 16% 60%;
@@ -277,7 +279,7 @@ body {
 }
 
 .post {
-    width: calc(95% / 3 - 16px);
+    width: calc(95% / 1 - 16px);
     box-sizing: border-box;
     border-radius: 1em;
     display: flex;
@@ -351,7 +353,7 @@ body {
 .post-content {
     position: relative;
     max-height: 30vh;
-    overflow: scroll;
+    overflow: hidden;
     font-weight: 400;
     color: var(--white-subtext-color);
 }
@@ -422,6 +424,13 @@ form.comment-form textarea {
     margin-bottom: 0.5em;
     font-family: var(--main-font-family);
     resize: none;
+}
+
+form#new-post-form input[type="text"]::placeholder,
+form#new-post-form textarea::placeholder,
+form.comment-form input[type="text"]::placeholder,
+form.comment-form textarea::placeholder {
+    color: var(--subwhite-text-color);
 }
 
 form#new-post-form button[type="submit"], 
